@@ -1,3 +1,8 @@
+2023-08-01  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
+	Regenerated.
+
 2023-07-06  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.65 released.
